Wrap tools in an element per row. fixes #11.

--- a/base/static/base/css/style.sass
+++ b/base/static/base/css/style.sass
@@ -232,13 +232,17 @@ body
   &.fa-chain-big
     font-size: 3rem
 
+.tools-row
+  position: relative
+  overflow: hidden
+
 .tool
   margin: 0 0 3rem 0
   padding: 0 0 3rem 0
   border-bottom: 1px solid $color-type
 
   @media (min-width: $desktop)
-    @include span(6 of 12 split)
+    @include span(4 of 12 split)
     border-bottom: none
     padding: 0
     font-size: 1.8rem
